# guidewire-cda-delta-clone

./: .gitignore  AWS_S3_STORAGE_GUIDE.md  Makefile  README.md  STORAGE_SETUP.md  main.py  pyproject.toml  pytest.ini  requirements.txt
examples/cda/: manifest.json
guidewire/: __init__.py  batch.py  delta_log.py  logging.py  manifest.py  processor.py  results.py  storage.py
testing/: TESTING.md
testing/tests/: test_azure_integration.py  test_end_to_end_integration.py  test_manifest_integration.py  test_s3_integration.py  test_storage_integration.py  test_target_cloud_config.py
tests/: test_delta_log.py  test_manifest.py  test_storage.py
