
[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "guidewire-cda-delta-clone"
version = "0.0.2"
dependencies = [
    "pyarrow==20.0.0",
    "ray[default]==2.45.0",
    "deltalake==1.1.4",
    "tqdm==4.67.0",
    'importlib-metadata; python_version<"3.10"',
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.5",
]

[tool.setuptools.packages.find]
where = ["guidewire"]  # ["."] by default