
[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "guidewire-cda-delta-clone"
version = "0.0.4"
dependencies = [
    "pyarrow==21.0.0",
    "ray[default]==2.45.0",
    "deltalake==1.1.4",
    "tqdm==4.67.0",
    'importlib-metadata; python_version<"3.10"',
]

[project.optional-dependencies]
test = [
    "pytest==8.4.1",
    "boto3==1.40.23",
    "requests==2.32.3",
    "azure-storage-blob==12.26.0",
]


[tool.setuptools.packages.find]
where = ["."]  # Look for packages in the root directory